--- a/common/footer.html
+++ b/common/footer.html
@@ -1,4 +1,4 @@
-
+<!-- footer.html -->
 <section class="footer">
     <p class="invite">Zapraszamy na social media GreenYogis!</p>
     <div class="icons">
@@ -11,7 +11,6 @@
         <a href="https://goo.gl/maps/QxFZ5XkYLD5A6iQ28" target="_blank">
             <i class="fa fa-globe"></i>
         </a>
-        
     </div>
     <p>
         GreenYogis 2023
