--- a/header.html
+++ b/header.html
@@ -1,4 +1,15 @@
 <!-- header.html -->
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GreenYogis</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
 <nav>
     <div class="nav-links" id="navLinks">
         <i class="glyphicon glyphicon-remove" onclick="hideMenu()"></i>
