--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <section class="sub-header">
     <div id="header-container"></div>
     <script>
-        fetch('header.html')
+        fetch('common/header.html')
             .then(response => response.text())
             .then(html => {
                 document.getElementById('header-container').outerHTML = html;})
