--- a/common/header.html
+++ b/common/header.html
@@ -14,12 +14,12 @@
     <div class="nav-links" id="navLinks">
         <i class="glyphicon glyphicon-remove" onclick="hideMenu()"></i>
         <ul>
-            <li><a href="../index.html"> START</a></li>
-            <li><a href="../about.html"> O NAS</a></li>
-            <li><a href="../courses.html"> ZAJĘCIA</a></li>
-            <li><a href="../shop.html"> SKLEP</a></li>
-            <li><a href="../photos.html"> GALERIA</a></li>
-            <li><a href="../contact.html"> KONTAKT</a></li>
+            <li><a href="index.html"> START</a></li>
+            <li><a href="about.html"> O NAS</a></li>
+            <li><a href="courses.html"> ZAJĘCIA</a></li>
+            <li><a href="shop.html"> SKLEP</a></li>
+            <li><a href="photos.html"> GALERIA</a></li>
+            <li><a href="contact.html"> KONTAKT</a></li>
         </ul>
     </div>
     <a href="index.html"><img src="images/logo.png"></a>
