--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <li><a href = "index.html"> START</a></li>
                     <li><a href = "about.html"> O NAS</a></li>
                     <li><a href = "courses.html"> ZAJĘCIA</a></li>
-                    <li><a href = "shop.html"> SKLEP</a></li>
                     <li><a href = "photos.html"> GALERIA</a></li>
+                    <li><a href = "signlog.html"> KONTO</a></li>
                     <li><a href = "contact.html"> KONTAKT</a></li>
                 </ul>
 
@@ -33,19 +33,6 @@
             <i class="glyphicon glyphicon-chevron-left" onclick="showMenu()"></i>
 
         </nav>
-
-    <div class="text-box">
-        <h1>
-            GreenYogis
-        </h1>
-        <p>
-            Yoga dla każdego
-        </p>
-        <a href="courses.html" class="hero-btn">
-            Zapisz się już dziś!
-        </a>
-
-    </div>
 
     </section>
 
