--- a/signlog.html
+++ b/signlog.html
@@ -10,7 +10,7 @@
 <div class="container" id="container">
 <div class="form-container sign-up-container">
 
-	<form method="POST" action="signup.php">
+	<form action="">
 		<h1>Załóż konto</h1>
 		<span>lub użyj swojego adresu e-mail do rejestracji</span>
 		<input type="text" name="name" placeholder="Imię">
