--- a/common/header.html
+++ b/common/header.html
@@ -17,8 +17,8 @@
             <li><a href="index.html"> START</a></li>
             <li><a href="about.html"> O NAS</a></li>
             <li><a href="courses.html"> ZAJĘCIA</a></li>
-            <li><a href="shop.html"> SKLEP</a></li>
             <li><a href="photos.html"> GALERIA</a></li>
+            <li><a href="signlog.html"> KONTO</a></li>
             <li><a href="contact.html"> KONTAKT</a></li>
         </ul>
     </div>
