--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
 
         </nav>
 
+    <div class="text-box">
+        <h1>
+            GreenYogis
+        </h1>
+        <p>
+            Yoga dla każdego
+        </p>
+        <a href="courses.html" class="hero-btn">
+            Zapisz się już dziś!
+        </a>
+
+    </div>
+
     </section>
 
     <!-- JS for menu -->
