--- a/signlog.html
+++ b/signlog.html
@@ -10,7 +10,7 @@
 <div class="container" id="container">
 <div class="form-container sign-up-container">
 
-	<form action="">
+	<form action="signin.php" method="POST">
 		<h1>Załóż konto</h1>
 		<span>lub użyj swojego adresu e-mail do rejestracji</span>
 		<input type="text" name="name" placeholder="Imię">
@@ -20,7 +20,7 @@
 	</form>
 </div>
 <div class="form-container sign-in-container">
-	<form action="#">
+	<form action="signup.php" method="post">
 		<h1>Zaloguj się</h1>
 		<span>lub użyj swojego konta</span>
 		<input type="email" name="email" placeholder="E-mail">
