--- a/signlog.html
+++ b/signlog.html
@@ -4,23 +4,81 @@
 	<title>Tworzenie konta i logowanie</title>
 	<link rel="stylesheet" type="text/css" href="signlog_style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
 </head>
 <body>
+
+<script type="module">
+	// Import the functions you need from the SDKs you need
+	import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+	import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+	// TODO: Add SDKs for Firebase products that you want to use
+	// https://firebase.google.com/docs/web/setup#available-libraries
+	
+	// Your web app's Firebase configuration
+	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+	const firebaseConfig = {
+		apiKey: "AIzaSyCYDx_WV45vRm4HP4JV_d0oGuEdC96Tf_A",
+		authDomain: "greenyogis-a311a.firebaseapp.com",
+		databaseURL: "https://greenyogis-a311a-default-rtdb.europe-west1.firebasedatabase.app",
+		projectId: "greenyogis-a311a",
+		storageBucket: "greenyogis-a311a.appspot.com",
+		messagingSenderId: "1088298803031",
+		appId: "1:1088298803031:web:e0b994b2d4fc494303a812",
+		measurementId: "G-8FGPF26LYP"
+	};
+	
+	// Initialize Firebase
+	const app = initializeApp(firebaseConfig);
+	const analytics = getAnalytics(app);
+	const auth = getAuth(app);
+	const database = getDatabase(app);
+
+	document.getElementById('greenYogis').addEventListener('submit', function (event) {
+		event.preventDefault();
+
+		const email = document.getElementById('email').value;
+		const password = document.getElementById('password').value;
+
+		createUserWithEmailAndPassword(auth, email, password)
+			.then((userCredential) => {
+				// Signed up successfully
+				const user = userCredential.user;
+				const name = document.getElementById('name').value;
+
+				// Save additional user data to the Realtime Database
+				const userRef = ref(database, 'users/' + user.uid);
+				set(userRef, {
+					name: name,
+					email: email
+				});
+
+				console.log('User signed up:', user);
+			})
+			.catch((error) => {
+				const errorCode = error.code;
+				const errorMessage = error.message;
+				console.error('Sign-up error:', errorCode, errorMessage);
+			});
+	});
+	</script>
 
 <div class="container" id="container">
 <div class="form-container sign-up-container">
 
-	<form action="signin.php" method="POST">
+	<form action="" id="greenYogis">
 		<h1>Załóż konto</h1>
 		<span>lub użyj swojego adresu e-mail do rejestracji</span>
-		<input type="text" name="name" placeholder="Imię">
-		<input type="email" name="email" placeholder="E-mail">
-		<input type="password" name="password" placeholder="Hasło">
-		<button>Zarejestruj się</button>
+		<input type="text" id="name" placeholder="Imię">
+		<input type="email" id="email" placeholder="E-mail">
+		<input type="password" id="password" placeholder="Hasło">
+		<button type="submit">Zarejestruj się</button>
 	</form>
 </div>
 <div class="form-container sign-in-container">
-	<form action="signup.php" method="post">
+	<form action="#">
 		<h1>Zaloguj się</h1>
 		<span>lub użyj swojego konta</span>
 		<input type="email" name="email" placeholder="E-mail">
