--- a/signlog.html
+++ b/signlog.html
@@ -1,116 +1,117 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <title>Tworzenie konta i logowanie</title>
-    <link rel="stylesheet" type="text/css" href="signlog_style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<title>Tworzenie konta i logowanie</title>
+	<link rel="stylesheet" type="text/css" href="signlog_style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
 <div class="container" id="container">
-    <div class="form-container sign-up-container">
-        <form action="" id="greenYogis">
-            <h1>Załóż konto</h1>
-            <span>lub użyj swojego adresu e-mail do rejestracji</span>
-            <input type="text" id="name" placeholder="Imię">
-            <input type="email" id="email" placeholder="E-mail">
-            <input type="password" id="password" placeholder="Hasło">
-            <button type="submit">Zarejestruj się</button>
-        </form>
-    </div>
-    <div class="form-container sign-in-container">
-        <form action="#">
-            <h1>Zaloguj się</h1>
-            <span>lub użyj swojego konta</span>
-            <input type="email" id="signInEmail" placeholder="E-mail">
-            <input type="password" id="signInPassword" placeholder="Hasło">
-            <a href="#">Zapomniałeś hasła?</a>
-            <button id="signInButton">Zaloguj się</button>
-        </form>
-    </div>
-    <div class="overlay-container">
-        <div class="overlay">
-            <div class="overlay-panel overlay-left">
-                <h1>Witaj ponownie!</h1>
-                <p>Zaloguj się, by uzyskać dostęp do swojego konta</p>
-                <button class="ghost" id="signIn">Zaloguj się</button>
-            </div>
-            <div class="overlay-panel overlay-right">
-                <h1>Cześć!</h1>
-                <p>Wprowadź swoje dane i zacznij podróż z nami</p>
-                <button class="ghost" id="signUp">Załóż konto</button>
-            </div>
-        </div>
-    </div>
+<div class="form-container sign-up-container">
+
+	<form action="">
+		<h1>Załóż konto</h1>
+		<span>lub użyj swojego adresu e-mail do rejestracji</span>
+		<input type="text" name="name" placeholder="Imię">
+		<input type="email" id="email" name="email" placeholder="E-mail">
+		<input type="password" id="password" name="password" placeholder="Hasło">
+		<input type="submit" id="sighUp" name="signup_submit" value="Sign up"/>
+		<button>Zarejestruj się</button>
+	</form>
+</div>
+<div class="form-container sign-in-container">
+	<form action="#">
+		<h1>Zaloguj się</h1>
+		<span>lub użyj swojego konta</span>
+		<input type="email" name="email" placeholder="E-mail">
+		<input type="password" name="password" placeholder="Hasło">
+		<a href="#">Zapomniałeś hasła?</a>
+
+	<button>Zaloguj się</button>
+	</form>
+</div>
+<div class="overlay-container">
+	<div class="overlay">
+		<div class="overlay-panel overlay-left">
+			<h1>Witaj ponownie!</h1>
+			<p>Zaloguj się, by uzyskać dostęp do swojego konta</p>
+			<button class="ghost" id="signIn">Zaloguj się</button>
+		</div>
+		<div class="overlay-panel overlay-right">
+			<h1>Cześć!</h1>
+			<p>Wprowadź swoje dane i zacznij podróż z nami</p>
+			<button class="ghost" id="signUp">Załóż konto</button>
+		</div>
+	</div>
+</div>
 </div>
 
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
-
-<script>
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-        apiKey: "AIzaSyCYDx_WV45vRm4HP4JV_d0oGuEdC96Tf_A",
-        authDomain: "greenyogis-a311a.firebaseapp.com",
-        databaseURL: "https://greenyogis-a311a-default-rtdb.europe-west1.firebasedatabase.app",
-        projectId: "greenyogis-a311a",
-        storageBucket: "greenyogis-a311a.appspot.com",
-        messagingSenderId: "1088298803031",
-        appId: "1:1088298803031:web:e0b994b2d4fc494303a812",
-        measurementId: "G-8FGPF26LYP"
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-
-    // Get references to Firebase services
-    const auth = firebase.auth();
-    const database = firebase.database();
-
-    document.getElementById('greenYogis').addEventListener('submit', function (event) {
-        event.preventDefault();
-
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-
-        auth.createUserWithEmailAndPassword(email, password)
-            .then((userCredential) => {
-                // Signed up successfully
-                const user = userCredential.user;
-                const name = document.getElementById('name').value;
-
-                // Save additional user data to the Realtime Database
-                const userRef = database.ref('users/' + user.uid);
-                userRef.set({
-                    name: name,
-                    email: email
-                });
-
-                console.log('User signed up:', user);
-            })
-            .catch((error) => {
-                const errorCode = error.code;
-                const errorMessage = error.message;
-                console.error('Sign-up error:', errorCode, errorMessage);
-            });
-    });
-
-    // TODO: Add sign-in logic
-</script>
-
 <script type="text/javascript">
-    const signUpButton = document.getElementById('signUp');
-    const signInButton = document.getElementById('signIn');
-    const container = document.getElementById('container');
+	const signUpButton = document.getElementById('signUp');
+	const signInButton = document.getElementById('signIn');
+	const container = document.getElementById('container');
 
-    signUpButton.addEventListener('click', () => {
-        container.classList.add("right-panel-active");
-    });
-    signInButton.addEventListener('click', () => {
-        container.classList.remove("right-panel-active");
-    });
+	signUpButton.addEventListener('click', () => {
+		container.classList.add("right-panel-active");
+	});
+	signInButton.addEventListener('click', () => {
+		container.classList.remove("right-panel-active");
+	});
 </script>
 
 </body>
+
+
+<script type="module">
+	// Import the functions you need from the SDKs you need
+	import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+	import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+	import { getDatabase } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+	import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+	// TODO: Add SDKs for Firebase products that you want to use
+	// https://firebase.google.com/docs/web/setup#available-libraries
+  
+	// Your web app's Firebase configuration
+	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+	const firebaseConfig = {
+	  apiKey: "AIzaSyCYDx_WV45vRm4HP4JV_d0oGuEdC96Tf_A",
+	  authDomain: "greenyogis-a311a.firebaseapp.com",
+	  databaseURL: "https://greenyogis-a311a-default-rtdb.europe-west1.firebasedatabase.app",
+	  projectId: "greenyogis-a311a",
+	  storageBucket: "greenyogis-a311a.appspot.com",
+	  messagingSenderId: "1088298803031",
+	  appId: "1:1088298803031:web:e0b994b2d4fc494303a812",
+	  measurementId: "G-8FGPF26LYP"
+	};
+  
+	// Initialize Firebase
+	const app = initializeApp(firebaseConfig);
+	const analytics = getAnalytics(app);
+	const database = getDatabase(app);
+	const auth = getAuth( );
+
+	const sighUp = document.getElementById('sighUp');
+
+	sighUp.addEventListener('click', (e) => {
+		const username = document.getElementById('name').value;
+		const email = document.getElementById('email').value;
+		const password = document.getElementById('password').value;
+		createUserWithEmailAndPassword(auth, email, password)
+		.then((userCredential) => {
+			// Signed in 
+			const user = userCredential.user;
+			alert("Zarejestrowano");
+			// ...
+		})
+		.catch((error) => {
+			const errorCode = error.code;
+			const errorMessage = error.message;
+			// ..
+			alert(errorMessage);
+		});
+	});
+  </script>
+
 </html>
