--- a/signlog.html
+++ b/signlog.html
@@ -10,14 +10,13 @@
 <div class="container" id="container">
 <div class="form-container sign-up-container">
 
-	<form action="">
+	<form id="MainForm">
 		<h1>Załóż konto</h1>
 		<span>lub użyj swojego adresu e-mail do rejestracji</span>
-		<input type="text" name="name" placeholder="Imię">
-		<input type="email" id="email" name="email" placeholder="E-mail">
-		<input type="password" id="password" name="password" placeholder="Hasło">
-		<input type="submit" id="sighUp" name="signup_submit" value="Sign up"/>
-		<button>Zarejestruj się</button>
+		<input type="text" id="nameInp" placeholder="Imię">
+		<input type="email" id="emailInp" placeholder="E-mail">
+		<input type="password" id="passwordInp" placeholder="Hasło">
+		<button type = "submit">Zarejestruj się</button>
 	</form>
 </div>
 <div class="form-container sign-in-container">
@@ -60,21 +59,12 @@
 	});
 </script>
 
-</body>
-
-
-<script type="module">
-	// Import the functions you need from the SDKs you need
+<script type="module"> 
 	import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 	import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
-	import { getDatabase } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+	import { getDatabase, set, ref} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 	import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-	// TODO: Add SDKs for Firebase products that you want to use
-	// https://firebase.google.com/docs/web/setup#available-libraries
-  
-	// Your web app's Firebase configuration
-	// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 	const firebaseConfig = {
 	  apiKey: "AIzaSyCYDx_WV45vRm4HP4JV_d0oGuEdC96Tf_A",
 	  authDomain: "greenyogis-a311a.firebaseapp.com",
@@ -86,32 +76,35 @@
 	  measurementId: "G-8FGPF26LYP"
 	};
   
-	// Initialize Firebase
 	const app = initializeApp(firebaseConfig);
-	const analytics = getAnalytics(app);
 	const database = getDatabase(app);
-	const auth = getAuth( );
+	const auth = getAuth(app);
 
-	const sighUp = document.getElementById('sighUp');
+	let NameInp = document.getElementById('nameInp');
+	let EmailInp = document.getElementById('emailInp');
+	let PasswordInp = document.getElementById('passwordInp');
+	let MainForm = document.getElementById('MainForm');
 
-	sighUp.addEventListener('click', (e) => {
-		const username = document.getElementById('name').value;
-		const email = document.getElementById('email').value;
-		const password = document.getElementById('password').value;
-		createUserWithEmailAndPassword(auth, email, password)
+	let RegisterUser = evt => {
+		evt.preventDefault();
+	
+		createUserWithEmailAndPassword(auth, EmailInp.value, PasswordInp.value)
 		.then((userCredential) => {
-			// Signed in 
-			const user = userCredential.user;
-			alert("Zarejestrowano");
-			// ...
+			console.log(userCredential);
 		})
 		.catch((error) => {
 			const errorCode = error.code;
 			const errorMessage = error.message;
-			// ..
-			alert(errorMessage);
-		});
-	});
+			console.log(errorCode);
+			console.log(errorMessage);
+		})
+
+	}
+
+	MainForm.addEventListener('submit', RegisterUser);
   </script>
+
+
+</body>
 
 </html>
